# RatanBox

./: .gitignore  CMakeLists.txt  EZ.cpp  GLfun.sln  GLfun.vcxproj  GLfun.vcxproj.filters  HowToBuild.md  Main.cpp  README.md  RatanBox.sln  RatanBox.vcxproj  RatanBox.vcxproj.filters  VertexArrays.cpp  build.bat  dockerfile  editor.bat  ideas.md  init.cpp  init.h  license  makefile  ratan  shader.h  shell.bat  todos.md  version
RatanBox/: RatanBox.sln  RatanBox.vcxproj  RatanBox.vcxproj.filters
RatanBox/libraries/lib/: glfw3.lib
RatanBox/src/: Application.cpp  shapes.cpp
archive/: CMakeLists.txt  build.bat  map.h  todos.md
core/games/: ratan.cpp
core/utils/: logger.cpp
core/window/sdl2/: sdl2.md
core/window/win32/: CMakeLists.txt  win32.md  win32wnd.h
core/window/win32/arc/: window32.cpp
core/window/win32/prevTesting/: hello_win32.cpp  win32_window.cpp
core/window/win32/src/: CoreGlobals.cpp  CoreRender.cpp  main.cpp  win32wnd.h
docs/: Gemfile  HowToBuild.md  howtobuild.md  index.html  ownLibUse.md
docs/_posts/: 2024-03-04-welcome-to-jekyll.markdown
engine/: Main.cpp  RatanBox.cpp  SpriteTexture.cpp  entername.cpp  entername.h  triangle.cpp
engine/Graphics/: RColour.cpp  RElements.cpp  RElements.h
engine/core/: core.cpp  window.cpp
engine/headerfiles/: Shaders.h  SpriteTexture.h  entername.h
engine/shaders/: 3.3.shader.fs  3.3.shader.vs
include/: glad.c
libraries/: glad.c
libraries/include/: RElements.h  triangle.h  window.h
old-docs/: batchfiles_build.md
src/: Window.cpp  checkCollision.h  enemy.h  game.h  globals.h  health.h  linuxWindow.cpp  main.cpp  player.h  ratan.cpp  vec1.h  vec2.h  vec3.h  vec4.h  win32_window.cpp  window32.h  windowx11.h
src/objects/: enemy.h  player.h  tile.h  vector.h  vectors.h  weapons.h
src/utils/: checkCollision.h  core.h  formater.h  logger.h  map.h  simple.h  testMap.json  testMap.toml
vault/: Hunter naming system.md  Hunter.md  Hunters.md  Ntodo..md  humans as a race.md  humans.md  ideas.md  the name hunter.md  vault for void polyrhythm.md  vault.md  world.md
vault/.obsidian/: graph.json  workspace.json
vault/templates/: base format.md
x64/Debug/: vc143.idb
(+44 files in other folders)
